kubernetes/overlays/staging/patches/ddi-ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ddi
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
        - ddi-dev.inokufu.space
      secretName: staging-ddi-tls
  rules:
    - host: ddi-dev.inokufu.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ddi
                port:
                  name: http
